--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -608,3 +608,4 @@ CONFIG_WIREGUARD=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_CRYPTO_SHA256_ARM64=y
 CONFIG_CRYPTO_SHA512_ARM64=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
