--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -591,4 +591,4 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
-F2FS_FS_ENCRYPTION=y
+CONFIG_F2FS_FS_ENCRYPTION=y
