defconfig: remove some debug

--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -593,3 +593,5 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_DEBUG_USER=n
+CONFIG_PANIC_ON_OOPS=y
+CONFIG_DEBUG_KERNEL=n
