--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -25,7 +25,8 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=n
 CONFIG_PANIC_TIMEOUT=5
-CONFIG_KALLSYMS_ALL=y
+CONFIG_KALLSYMS=n
+CONFIG_KALLSYMS_ALL=n
 # CONFIG_AIO is not set
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
@@ -553,7 +554,7 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
-CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_INFO=n
 CONFIG_DEBUG_LIST=y
 CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_IPC_LOGGING=y
