defconfig: enable CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y

--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -566,6 +566,7 @@ CONFIG_KEYS=y
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY_PATH=y
 CONFIG_SECURITY_PFT=y
 CONFIG_LSM_MMAP_MIN_ADDR=32768
