--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -32,7 +32,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_MODULES=y
+# CONFIG_MODULES is not set
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
@@ -525,9 +525,9 @@ CONFIG_MSM_SCM=y
 CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
+CONFIG_MSM_CORE_CTL=y
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_ONEPLUS_HCUBE=m
 CONFIG_KERNEL_TEXT_MPU_PROT=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_PARAM_READ_WRITE=y
