--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -1,5 +1,5 @@
 CONFIG_LOCALVERSION="-perf"
-CONFIG_SYSVIPC=y
+CONFIG_SYSVIPC=n
 CONFIG_SCHED_TUNE=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_CPU_FREQ_GOV_SCHED=y
