haruhi_defconfig: harden configuration

--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -594,3 +594,6 @@ CONFIG_DEBUG_USER=n
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_DEBUG_KERNEL=n
 CONFIG_DEBUG_RODATA=y
+CONFIG_SECURITY_DMESG_RESTRICT=y
+CONFIG_STRICT_MEMORY_RWX=y
+CONFIG_SECURITY_NETWORK_XFRM=y
