haruhi_defconfig: enable KSM

--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -597,3 +597,4 @@ CONFIG_DEBUG_RODATA=y
 CONFIG_SECURITY_DMESG_RESTRICT=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_SECURITY_NETWORK_XFRM=y
+CONFIG_KSM=y
