defconfig: enable Trusty IPC

--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -598,3 +598,6 @@ CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_SECURITY_NETWORK_XFRM=y
 CONFIG_KSM=y
 CONFIG_CRYPTO_LZ4=y
+CONFIG_TRUSTY=y
+CONFIG_TRUSTY_VIRTIO=y
+CONFIG_TRUSTY_VIRTIO_IPC=y
