haruhi_defconfig: enable CONFIG_QUOTA see https://github.com/aosp-mirror/kernel_msm/commit/ebb5537a1fd65c0d9960b26e1581e30539aefab8\#diff-48fd9979dd83cbe029b960983aff90e7 and https://source.android.com/devices/storage/faster-stats\#implementation needs device tree update

--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -590,3 +590,7 @@ CONFIG_TRUSTY_VIRTIO=y
 CONFIG_TRUSTY_VIRTIO_IPC=y
 CONFIG_SLIMBUS_MSM_CTRL=y
 # CONFIG_EXFAT_DEBUG is not set
+CONFIG_QUOTA=y
+CONFIG_QUOTACTL=y
+CONFIG_QFMT_V2=y
+# CONFIG_PRINT_QUOTA_WARNING is not set
