--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -573,6 +573,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_PANIC_ON_DATA_CORRUPTION=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_DEBUG_USER=n
