--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -595,3 +595,7 @@ CONFIG_QUOTACTL=y
 CONFIG_QFMT_V2=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
 # CONFIG_DEVPORT is not set
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
