--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -31,7 +31,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-# CONFIG_MODULES is not set
+CONFIG_MODULES=y
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
@@ -589,6 +589,7 @@ CONFIG_TRUSTY=y
 CONFIG_TRUSTY_VIRTIO=y
 CONFIG_TRUSTY_VIRTIO_IPC=y
 CONFIG_SLIMBUS_MSM_CTRL=y
+CONFIG_EXFAT_FS=y
 # CONFIG_EXFAT_DEBUG is not set
 CONFIG_QUOTA=y
 CONFIG_QUOTACTL=y
@@ -597,5 +598,8 @@ CONFIG_QFMT_V2=y
 # CONFIG_DEVPORT is not set
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y
+# CONFIG_TCP_CONG_BIC is not set
+# CONFIG_TCP_CONG_CUBIC is not set
+# CONFIG_TCP_CONG_HTCP is not set
 CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
