--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -584,6 +584,7 @@ CONFIG_CRYPTO_LZ4=y
 CONFIG_TRUSTY=y
 CONFIG_TRUSTY_VIRTIO=y
 CONFIG_TRUSTY_VIRTIO_IPC=y
+CONFIG_PROC_DEVICETREE=y
 CONFIG_SLIMBUS_MSM_CTRL=y
 # CONFIG_EXFAT_DEBUG is not set
 CONFIG_QUOTA=y
