--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -610,3 +610,4 @@ CONFIG_CRYPTO_SHA256_ARM64=y
 CONFIG_CRYPTO_SHA512_ARM64=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_QUICK_WAKEUP=y
+CONFIG_POWERSUSPEND=y
