--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -209,12 +209,6 @@ CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
 CONFIG_MSM_BT_POWER=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
@@ -611,3 +605,4 @@ CONFIG_CRYPTO_SHA512_ARM64=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_POWERSUSPEND=y
+# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
