--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -604,3 +604,7 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_POWERSUSPEND=y
 # CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
+# CONFIG_TCP_CONG_BIC is not set
+# CONFIG_TCP_CONG_CUBIC is not set
+# CONFIG_TCP_CONG_HTCP is not set
+CONFIG_EXFAT_FS=y
