--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -8,6 +8,8 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_HZ_300=y
+CONFIG_HZ=300
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
