--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -606,3 +606,14 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 # CONFIG_TCP_CONG_CUBIC is not set
 # CONFIG_TCP_CONG_HTCP is not set
 CONFIG_EXFAT_FS=y
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:vfat:s0"
+CONFIG_SDFAT_DEBUG=y
+CONFIG_SDFAT_DBG_MSG=y
+CONFIG_SDFAT_STATISTICS=y
