--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -224,7 +224,6 @@ CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
-CONFIG_UID_CPUTIME=y
 CONFIG_QSEECOM=y
 CONFIG_TI_DRV2667=y
 CONFIG_TI_DRV2605=y
@@ -586,6 +585,11 @@ CONFIG_TRUSTY_VIRTIO=y
 CONFIG_TRUSTY_VIRTIO_IPC=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_SLIMBUS_MSM_CTRL=y
+CONFIG_TASKSTATS=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
+CONFIG_UID_SYS_STATS=y
 # CONFIG_EXFAT_DEBUG is not set
 CONFIG_QUOTA=y
 CONFIG_QUOTACTL=y
